unpackaged/main/default/objects/blng__RevenueDistributionMethod__c/blng__RevenueDistributionMethod__c.object-meta.xml
<CustomObject>
    <customHelpPage>blng__revenueDistributionHelp</customHelpPage>
    <label>Revenue Distribution Method</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Distribution Methods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>