unpackaged/main/default/objects/blng__RevenueDistributionMethod__c/fields/blng__DistributionMethod__c.field-meta.xml
<CustomField>
    <fullName>blng__DistributionMethod__c</fullName>
    <inlineHelpText>Sélectionnez la méthode de comptabilisation du revenu : quotidienne, mensuelle ou en une fois</inlineHelpText>
    <label>Distribution Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__RevenueDistributionMethod</valueSetName>
    </valueSet>
</CustomField>