unpackaged/main/default/objects/blng__RevenueDistributionMethod__c/fields/blng__FullRecognitionDate__c.field-meta.xml
<CustomField>
    <fullName>blng__FullRecognitionDate__c</fullName>
    <inlineHelpText>Si la méthode de distribution sélectionnée est Complet, sélectionnez Manuel pour saisir une date.</inlineHelpText>
    <label>Full Recognition Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__FullRecognitionDate</valueSetName>
    </valueSet>
</CustomField>