unpackaged/main/default/objects/blng__RevenueDistributionMethod__c/fields/blng__RevenueScheduleTermEndDate__c.field-meta.xml
<CustomField>
    <fullName>blng__RevenueScheduleTermEndDate__c</fullName>
    <inlineHelpText>La date de fin peut être basée sur la date de fin de l&#39;objet ou saisie manuellement.
        Pour une comptabilisation complète, définissez-la sur Aucun.</inlineHelpText>
    <label>Revenue Schedule Term End Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__RevenueScheduleEndDate</valueSetName>
    </valueSet>
</CustomField>