unpackaged/main/default/objects/blng__RevenueDistributionMethod__c/fields/blng__RevenueScheduleTermStartDate__c.field-meta.xml
<CustomField>
    <fullName>blng__RevenueScheduleTermStartDate__c</fullName>
    <inlineHelpText>La date de début peut être basée sur la date de début de l&#39;objet ou saisie manuellement.
        Pour une comptabilisation complète, définissez-la sur Aucun.</inlineHelpText>
    <label>Revenue Schedule Term Start Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__RevenueScheduleStartDate</valueSetName>
    </valueSet>
</CustomField>