unpackaged/main/default/objects/blng__RevenueDistributionMethod__c/listViews/blng__All.listView-meta.xml
<ListView>
    <fullName>blng__All</fullName>
    <columns>NAME</columns>
    <columns>blng__Active__c</columns>
    <columns>blng__DistributionMethod__c</columns>
    <columns>blng__FullRecognitionDate__c</columns>
    <columns>blng__Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>